Add method getAllWorkflows and getAllWorkflowsPageable